--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -20,6 +20,17 @@
       <None Update="Shaders\Basic.vert">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Textures\Example.png">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Textures\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="StbImageSharper" Version="1.0.1" />
     </ItemGroup>
 
 </Project>
