Begin vulkan loading Create Logger

--- a/VulkanBackend/VulkanBackend.csproj
+++ b/VulkanBackend/VulkanBackend.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
     <ItemGroup>
@@ -12,11 +13,6 @@
 
     <ItemGroup>
       <PackageReference Include="Silk.NET.Vulkan" Version="2.22.0" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Vulkan\Common\" />
-      <Folder Include="Vulkan\Initialization\" />
     </ItemGroup>
 
 </Project>
